--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html></pre>
 <html>
-<body bgcolor="#E6E6FA">
+<body background="bgimage.jpg" bgcolor="#E6E6FA">
 <h1>Hello world!</h1>
 <p><a href="https://www.w3schools.com">Visit W3Schools.com!</a></p>
 </body>
